packages/coln-compiler/test/golden/ind.output
-- elaborated
global entry named T
in mode: Inductive
type: Theory
value: Set
global entry named Graph
in mode: Conjunctive
type: Theory
value: sig
  v : Set
  e : v -> v -> Prop
end
global entry named TransitiveExt
in mode: Conjunctive
type: (G : Graph) -> Theory
value: G => sig
  p : G.v -> G.v -> Prop
  incl : (v0 : G.v) -> (v1 : G.v) -> G.e v0 v1 -> p v0 v1
  snoc : (v0 : G.v) -> (v1 : G.v) -> (v2 : G.v) -> p v0 v1 -> G.e v1 v2 -> p v0 v2
end

-- messages

error[E0316]: cannot use inductively bound variable in a conjunctive context
14 | ind def transitive-closure (G : Graph) : TransitiveExt G := init (TransitiveExt G)
14 |                                                                                 ^

error[E0316]: cannot use inductively bound variable in a conjunctive context
16 | ind def freept (X : Set) : X := init X
16 |                                      ^
